Refactor toString() method in Therapist and Patient classes